--- a/python/dockerfile
+++ b/python/dockerfile
@@ -1,8 +1,13 @@
-FROM alpine
+# Use a valid Python base image (e.g., python:3.12.2)
+FROM python:3.12.2-alpine
 
+# Create user and set working directory
 RUN addgroup -S mercari && adduser -S trainee -G mercari
-# RUN chown -R trainee:mercari /path/to/db
 
-USER trainee
+COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
 
-CMD ["python", "-V"]
+WORKDIR /app
+COPY . .
+
+CMD ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "9000"]
