--- a/python/dockerfile
+++ b/python/dockerfile
@@ -10,4 +10,7 @@ RUN pip3 install -r requirements.txt
 WORKDIR /app
 COPY . .
 
+EXPOSE 9000
+
 CMD ["uvicorn", "main:app", "--reload", "--host", "0.0.0.0", "--port", "9000"]
+
